--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     password: yellow1
     url: jdbc:mysql://localhost:3306/oil?characterEncoding=utf-8&useSSL=false
   mail:
-    host: smtp.163.com
-    username: zymikker@163.com
-    password: LGZWWBPWNMUGRHKI
+    host:
+    username:
+    password:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
