--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: yellow1
+    username:
+    password:
     url: jdbc:mysql://localhost:3306/oil?characterEncoding=utf-8&useSSL=false
   mail:
     host:
